--- a/src/components/CatList.css
+++ b/src/components/CatList.css
@@ -1,9 +1,10 @@
 .cat-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-rows: 10px;
 }
 
 .cat-list img {
-  width: 300px;
+  width: 250px;
+  padding-bottom: 0.1rem;
 }
